<resources>
    <string name="app_name">高科大校園 ATM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Save your happiness</string>
    <string name="nav_header_subtitle">0624063@nkust.edu.tw</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_gmapl">Gmap</string>
    <string name="action_websearch">Web_search</string>
    <string name="action_about">About</string>

    <string name="action_Btn_infor">最新資訊</string>
    <string name="action_Btn_class">校務系統</string>
    <string name="action_Btn_calendar">行事曆</string>
    <string name="action_Btn_food">高科美食</string>
    <string name="action_Btn_department">高科系所介紹</string>
    <string name="action_Btn_mis">高科資管系</string>

    <string name="menu_home">Home</string>
    <string name="menu_deposit">DEPOSIT 存款</string>
    <string name="menu_withdrawal">WITHDRAWAL 提款</string>
    <string name="menu_balance">BALANCE 存款餘額</string>
    <string name="menu_payment">PAYMENT 付款</string>
    <string name="menu_paymentdetail">RECORD 交易紀錄</string>
    <string name="menu_transfer">TRANSFER 轉帳</string>
    <string name="menu_logout">LOGOUT 登出</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button1_1"><a href="http://www.nkfust.edu.tw/bin/home.php">最新消息</a></string>>
    <string name="button1_2"><a href='http://www.nkfust.edu.tw/files/11-1000-420.php'>校區資訊</a></string>>
    <string name="button1_3"><a href='http://www.nkfust.edu.tw/files/11-1000-1769.php'>交通資訊</a></string>

    <string name="button2_1"><a href="http://www.kuas.edu.tw/bin/home.php">最新消息</a></string>>
    <string name="button2_2"><a href='http://www.kuas.edu.tw/files/11-1000-12.php'>校區資訊</a></string>>
    <string name="button2_3"><a href='http://www.kuas.edu.tw/files/11-1000-65.php'>交通資訊</a></string>

    <string name="button3_1"><a href="http://www.kuas.edu.tw/bin/home.php">最新消息</a></string>>
    <string name="button3_2"><a href='http://www.kuas.edu.tw/files/11-1000-12.php'>校區資訊</a></string>>
    <string name="button3_3"><a href='http://www.kuas.edu.tw/files/11-1000-65.php'>交通資訊</a></string>

    <string name="button4_1"><a href="http://www.nkmu.edu.tw/home.asp">最新消息</a></string>>
    <string name="button4_2"><a href='http://www.nkmu.edu.tw/wish.asp'>校區資訊</a></string>>
    <string name="button4_3"><a href='http://www.nkmu.edu.tw/chimap.asp'>交通資訊</a></string>

    <string name="button5_1"><a href="http://www.nkmu.edu.tw/home.asp">最新消息</a></string>>
    <string name="button5_2"><a href='http://www.nkmu.edu.tw/wish.asp'>校區資訊</a></string>>
    <string name="button5_3"><a href='http://www.nkmu.edu.tw/nanmap.asp'>交通資訊</a></string>

</resources>
