<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Btn_infor"
        android:layout_width="123dp"
        android:layout_height="104dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="509dp"
        android:background="@drawable/balance"
        android:backgroundTint="#3F51B5"
        android:text="@string/action_Btn_infor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_class"
        android:layout_width="123dp"
        android:layout_height="104dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="509dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/action_Btn_class"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_calendar"
        android:layout_width="123dp"
        android:layout_height="104dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="286dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="341dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/action_Btn_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_food"
        android:layout_width="123dp"
        android:layout_height="104dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="286dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="341dp"
        android:backgroundTint="#2196F3"
        android:text="@string/action_Btn_food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_department"
        android:layout_width="123dp"
        android:layout_height="104dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="171dp"
        android:background="@drawable/balance"
        android:backgroundTint="#3F51B5"
        android:text="@string/action_Btn_department"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_mis"
        android:layout_width="123dp"
        android:layout_height="104dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="171dp"
        android:backgroundTint="#2196F3"
        android:text="@string/action_Btn_mis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>